# fil

./: .gitignore  Cargo.toml  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  install.sh
crates/fil-daemon/: Cargo.toml
crates/fil-daemon/src/: config.rs  hub.rs  main.rs  pty.rs  quic_client.rs  setup.rs  terminal.rs
crates/fil-hub/: Cargo.toml
crates/fil-hub/src/: config.rs  main.rs  quic.rs  quic_certs.rs  sessions.rs  state.rs  ws.rs
crates/fil-hub/src/auth/: apple.rs  github.rs  jwt.rs  mod.rs  shared.rs
crates/fil-hub/src/db/: migrations.rs  mod.rs
crates/fil-hub/src/routes/: devices.rs  health.rs  mod.rs  sessions.rs
crates/fil-protocol/: Cargo.toml  build.rs
crates/fil-protocol/proto/: fil.proto
crates/fil-protocol/src/: crypto.rs  lib.rs
ios/: ExportOptions.plist  project.yml
ios/Fil/: Info.plist
ios/Fil.xcodeproj/: project.pbxproj
ios/Fil.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ios/Fil/App/: AppFeature.swift  AppView.swift  FilApp.swift
ios/Fil/Assets.xcassets/GitHubMark.imageset/: Contents.json
ios/Fil/Core/Models/: FilActivity.swift  FilNotification.swift  Machine.swift  TokenStorage.swift
ios/Fil/Core/Network/: ConnectionManager.swift  HubClient.swift  HubWebSocket.swift  QUICClient.swift
ios/Fil/Core/Theme/: FilTheme.swift
ios/Fil/Features/Auth/: AuthFeature.swift  AuthView.swift  GitHubAuthService.swift  OnboardingView.swift
ios/Fil/Features/Machines/: MachinesFeature.swift  MachinesView.swift
ios/Fil/Features/Settings/: SettingsView.swift
ios/Fil/Features/Terminal/: TerminalFeature.swift  TerminalView.swift
ios/FilWidgets/: FilLiveActivity.swift  FilWidgets.swift
web/: package-lock.json
web/src/pages/: index.astro  privacy.astro
