[package]
name = "fil-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Fil daemon — PTY proxy that connects your terminal to the Fil hub"

[[bin]]
name = "fil"
path = "src/main.rs"

[dependencies]
fil-protocol = { path = "../fil-protocol" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
nix = { version = "0.29", features = ["term", "signal", "process", "fs"] }
libc = "0.2"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
clap = { version = "4", features = ["derive"] }
chrono = { workspace = true }
dirs = "6"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
prost = { workspace = true }
url = "2"
reqwest = { version = "0.12", features = ["json"] }
open = "5"
gethostname = "1"
