[package]
name = "fil-hub"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Fil hub — central server for session registry, auth, and routing"

[[bin]]
name = "fil-hub"
path = "src/main.rs"

[dependencies]
fil-protocol = { path = "../fil-protocol" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
prost = { workspace = true }
base64 = "0.22"
