[package]
name = "fil-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Protocol definitions for Fil — protobuf messages and shared types"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
snow = "0.9"
rand = "0.9"
base64 = "0.22"

[build-dependencies]
prost-build = "0.13"
